adding more places
adding more places to visit

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/ba69800733.js" crossorigin="anonymous"></script>
 
-    <title>City Tours App</title>
+    <title>City Tours Romania</title>
   </head>
 
   <body>
